# rust-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: helpers.rs  lib.rs  proto.rs  toolchain_toml.rs
tests/: download_test.rs  globals_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
