[package]
name = "rust_plugin"
version = "0.10.5"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { version = "1.2.0" }
proto_pdk = { version = "0.21.1" }                                            #, path = "../../proto/crates/pdk" }
serde = "1.0.203"
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

[dev-dependencies]
proto_pdk_test_utils = { version = "0.25.0" }       #, path = "../../proto/crates/pdk-test-utils" }
starbase_sandbox = "0.6.4"
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
